shalinee | dev |GIDK-739|  datepicker align issue fixed

--- a/apps/web-giddh/src/app/theme/ngx-date-range-picker/ngx-daterangepicker.component.scss
+++ b/apps/web-giddh/src/app/theme/ngx-date-range-picker/ngx-daterangepicker.component.scss
@@ -1600,7 +1600,9 @@ tr:first-child.in-range-hovered.available {
         border-radius: 50% 0 0 50%;
     }
 }
-
+cdk-virtual-scroll-viewport{
+    height: 284px;
+}
 @media (min-height: 767px) {
     .ranges-perfect-scrollbar {
         overflow: initial !important;
@@ -1822,6 +1824,14 @@ tr:first-child.in-range-hovered.available {
     }
     .md-drppicker .calendar {
         max-width: 100%;
+        .th-div, .td-div{
+            min-width: 50px;
+        }
+         .td-div{
+             span{
+                 margin-left: 10px;
+             }
+         }
     }
     .d-container {
         width: 100%;
@@ -1864,6 +1874,9 @@ tr:first-child.in-range-hovered.available {
         left: 11px;
         width: 79%;
     }
+    cdk-virtual-scroll-viewport{
+        height: calc(100vh - 350px);
+    }
 }
 
 @media (max-width: 375px) {
@@ -1887,6 +1900,14 @@ tr:first-child.in-range-hovered.available {
         left: 11px;
         width: 79%;
     }
+}
+@media(max-width:330px){
+    .md-drppicker .calendar {
+        .th-div, .td-div{
+            min-width: 44px;
+        }
+    }
+
 }
 @media (max-height: 767px) {
     .drops-down-right {
